# JasperVoice

./: .gitignore  AGENTS.md  README.md  jaspervoice.spec  pyproject.toml  requirements-dev.txt  requirements.txt
installer/: JasperVoice.iss
openspec/changes/jaspervoice-mvp/: design.md  proposal.md  tasks.md
openspec/changes/jaspervoice-mvp/specs/audio-capture/: spec.md
openspec/changes/jaspervoice-mvp/specs/config/: spec.md
openspec/changes/jaspervoice-mvp/specs/global-hotkey/: spec.md
openspec/changes/jaspervoice-mvp/specs/text-injection/: spec.md
openspec/changes/jaspervoice-mvp/specs/transcription/: spec.md
openspec/changes/jaspervoice-mvp/specs/tray-ui/: spec.md
openspec/changes/jaspervoice-ui/: design.md  proposal.md  tasks.md
openspec/changes/jaspervoice-ui/specs/global-hotkey/: spec.md
prototype/: ui_prototype.html
scripts/: build_release.ps1  make_icon.py  make_promo_video.py  rthook_cuda.py
src/jaspervoice/: __init__.py  __main__.py  app.py  app_gui.py  assets.py  audio.py  config.py  dictionary.py  history.py  hotkey.py  injection.py  overlay.py  postprocessing.py  single_instance.py  sounds.py  theme.py  transcription.py  tray.py  ui.py  ui_pages.py  ui_widgets.py  updater.py
tests/: conftest.py  test_audio.py  test_config.py  test_dictionary.py  test_e2e.py  test_history.py  test_hotkey.py  test_hotkey_toggle.py  test_injection.py  test_integration.py  test_noise_gate.py  test_overlay.py  test_postprocessing.py  test_single_instance.py  test_sounds.py  test_theme.py  test_transcription.py  test_tray.py  test_ui.py  test_updater.py
(+2 files in other folders)
